# aihasto-bot

./: .dockerignore  .env.example  Cargo.toml  README.md  build.rs
.github/workflows/: edge.yml
docker/: .env.example  Dockerfile  docker-compose.yml
migrations/2024-12-28-082045_create_voice_channels/: down.sql  up.sql
migrations/2024-12-29-112549_create_moderation_log/: down.sql  up.sql
migrations/2024-12-29-130242_create_channel_log/: down.sql  up.sql
migrations/2024-12-29-131053_create_allowed_roles/: down.sql  up.sql
migrations/2024-12-31-103751_create_fang_tasks/: down.sql  up.sql
migrations/2025-01-01-075820_create_guild_settings/: down.sql  up.sql
migrations/2025-01-08-145011_create_moderation_log_messages/: down.sql  up.sql
migrations/2025-01-20-120543_add_softban/: up.sql
src/: commands.rs  data.rs  embeds.rs  event_handler.rs  features.rs  logging.rs  main.rs  models.rs  schema.rs  util.rs
src/commands/: beep.rs  case.rs  manage.rs  moderation.rs  role.rs  temp_voice.rs
src/commands/manage/: allowed_roles.rs  channels.rs  softban.rs  tempvoice.rs
src/features/: case.rs  message_change_log.rs  moderation.rs  moderation_dm.rs  moderation_log.rs  temp_role.rs  temp_voice.rs  temp_warning.rs
src/models/: allowed_role.rs  guild_settings.rs  moderation_log.rs  voice_channel.rs
src/models/guild_settings/: cache.rs
